# uniflo-testing

./: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
.github/workflows/: fake-portal-tests.yml
docs/phase-6/: applicant-type-citizenship-plan.md
fake_portals/: _fluid.py  uct.py  uj.py  up.py  wits.py
fixtures/: student.py
tests/: test_uct.py  test_uj.py  test_up.py  test_wits.py
